tests/parser/parse-let.9.bad.error
error: Invalid variable
  --> test:5:17
   |
 5 |    (let ((declare 5 (T -> T)))
   |                   ^ expected identifier
