tests/parser/parse-let.9.bad.coalton
;; BAD: Parse Let
(package test-package)

(define x
  (let ((declare 5 (T -> T)))
   "x"))
